attempt to fix white space issue, added #container {     float: left;     margin: 0;     width: 100%; }

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,12 @@ body {
   text-transform: uppercase;
 }
 
+#container {
+    float: left;
+    margin: 0;
+    width: 100%;
+}
+
 .row {
   padding-right: 0px;
   margin-right: 0px;
